--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2021"
 rust-version = "1.81.0"
 description = "Cargo subcommand to synchronize README with crate documentation"
 readme = "README.md"
-repository = "https://github.com/gifnksm/cargo-sync-rdme"
+# changed to make binstall work
+repository = "https://github.com/TroyKomodo/cargo-sync-rdme"
 license = "MIT OR Apache-2.0"
 keywords = []
 categories = []
